--- a/style.css
+++ b/style.css
@@ -1,9 +1,86 @@
+:root {
+  --text-color: #f0f4f5;
+  --background-color: #263343;
+  --accent-color: #d49466;
+}
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  font-family: "Source Sans Pro", sans-serif;
+}
+a {
+  text-decoration: none;
+  color: var(--text-color);
+}
 .navbar {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
+  padding: 8px 12px;
+  background: var(--background-color);
+}
+.navbar_logo {
+  font-size: 24px;
+  color: var(--text-color);
+}
+.navbar_logo i {
+  color: var(--accent-color);
 }
 .navbar_menu {
   display: flex;
   list-style: none;
+  padding-left: 0;
+}
+.navbar_menu li {
+  padding: 8px 12px;
+}
+.navbar_menu li:hover {
+  background: var(--accent-color);
+  border-radius: 4px;
+}
+.navbar_icons {
+  display: flex;
+  padding-left: 0;
+  color: var(--text-color);
+  list-style: none;
+}
+.navbar_icons li {
+  padding: 8px 12px;
+}
+.navbar_toggleBtn {
+  display: none;
+  position: absolute;
+  right: 32px;
+  font-size: 24px;
+  color: var(--accent-color);
+}
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 8px 24px;
+  }
+  .navbar_menu {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+  }
+  .navbar_menu li {
+    text-align: center;
+  }
+  .navbar_icons {
+    display: none;
+    width: 100%;
+    justify-content: center;
+  }
+  .navbar_toggleBtn {
+    display: block;
+  }
+  .navbar_menu.active,
+  .navbar_icons.active {
+    display: flex;
+  }
 }
